fix image cropping

--- a/app/styles/knihy-roka.scss
+++ b/app/styles/knihy-roka.scss
@@ -80,7 +80,7 @@
 
 .background-section {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   min-height: _get-rem(880px);
 }
 
